# xplat

./: .claude-yo.yml  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  2025-09-14-update-dependencies.txt  BASELINE-REPORT.md  CLAUDE.md  LICENSE  README.md  RELEASE-NOTES.md  ROADMAP.md  TASK.md  TODO-CLI.md  pyproject.toml
.coverage/: lcov.info
.github/workflows/: python-package.yml
devlog/: 2025-09-08-analyzing-your-codebase.txt  2025-09-13-update-dependencies-and-q-a-workflow.txt  2025-09-14-update-dependencies.txt  2025-09-14-use-typer-annotate-interface.txt  2025-12-29-change-claude-yo-base-image.txt  2026-01-09-claude-init.txt
src/clidemo/: colors.py  envvar.py  help.py  main.py  name.py  opthelp.py  optprompt.py  random.py
src/xplat/: __main__.py  cli.py  constants.py  gui.py  info.py  list.py  list_files.py  main.py  names.py  pdf2img.py  pdf_to_img.py  plat_info.py  rename.py  renamer.py
src/xplat/names/: names.py  web.py
tests/: test__main__.py  test_cli.py  test_list.py  test_pdf_to_img.py  test_rename.py  test_renamer.py  test_xplat.py
tests/reports/: 2025-12-29-coverage.txt
