[tool.poetry]
name = "xplat"
version = "0.1.1"
description = "Cross-platform tools for file and image conversion"
authors = ["Neil Johnson <neil@cadent.com>"]
packages = [{ include = "xplat", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"
optimize-images = "^1.5.0"
pdf2image = "^1.16.0"
typer = "^0.4.1"
shellingham = "^1.4.0"
importlib-resources = "^5.12.0"

[tool.poetry.scripts]
xplat = 'xplat.cli:app'

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.1"
pylint = "^2.16.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
